# tkinter-wizard

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  wizard.py
demo/: example.py
demo/steps/: __init__.py  checkbox_step.py  configuration_step.py  logs_step.py  progress_step.py  theme_step.py
src/wizard/: __init__.py  enums.py  progress_interface.py  wizard_app.py  wizard_config.py  wizard_process.py  wizard_step.py
src/wizard/steps/: __init__.py  checkbox_step.py  configuration_step.py  end_success_step.py  end_with_fail_step.py  logs_step.py  progress_step.py  success_completion_step.py  welcome_step.py
