[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tkinter-wizard"
version = "0.1.0"
description = "Library for creating general wizards based on Tkinter"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
authors = [
    {name = "Oleg Orlov", email = "orelcokolov@gmail.com"}
]
keywords = ["tkinter", "wizard", "gui", "ui"]
dependencies = []

[project.optional-dependencies]
themes = ["ttkthemes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]

[project.urls]
Homepage = "https://github.com/OrelSokolov/tkinter-wizard"
Documentation = "https://github.com/OrelSokolov/tkinter-wizard#readme"
Repository = "https://github.com/OrelSokolov/tkinter-wizard"
Issues = "https://github.com/OrelSokolov/tkinter-wizard/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

